--- a/libandroid-navigation/src/main/AndroidManifest.xml
+++ b/libandroid-navigation/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application>
-        <service android:name="com.mapbox.services.android.navigation.v5.navigation.NavigationService"/>
+        <service android:name="com.mapbox.services.android.navigation.v5.internal.navigation.NavigationService"/>
     </application>
 
 </manifest>
